--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,13 @@
     <main>
       <!-- HERO SECTION -->
       <section id="home" class="hero">
+        <div class="hero-video-wrapper">
+          <video autoplay loop muted playsinline>
+            <source src="videos/26.webm" type="video/webm" />
+            <!-- Opcional: añade un MP4 como respaldo para navegadores muy viejos -->
+            <!-- <source src="videos/26.mp4" type="video/mp4"> -->
+          </video>
+        </div>
         <div class="hero-overlay"></div>
         <div class="container">
           <h1>Lakeside Serenity in Davidson</h1>
