--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       <section id="home" class="hero">
         <div class="hero-video-wrapper">
           <video autoplay loop muted playsinline>
-            <source src="videos/26.webm" type="video/webm" />
+            <source src="videos/26.mp4" type="video/mp4" />
             <!-- Opcional: añade un MP4 como respaldo para navegadores muy viejos -->
             <!-- <source src="videos/26.mp4" type="video/mp4"> -->
           </video>
