--- a/public/index.html
+++ b/public/index.html
@@ -323,7 +323,7 @@
 
           <div class="view-more-reviews">
             <a
-              href="https://www.airbnb.com.ec/rooms/732102319759567131?viralityEntryPoint=1&s=76&_set_bev_on_new_domain=1761410183_EAYzYyYjgyN2MxYW&source_impression_id=p3_1761586481_P3S3SGED0Ux4sxro"
+              href="https://www.airbnb.com.ec/rooms/732102319759567131/reviews?viralityEntryPoint=1&s=76&_set_bev_on_new_domain=1761410183_EAYzYyYjgyN2MxYW&source_impression_id=p3_1761586481_P3S3SGED0Ux4sxro&scroll_to_review=1434183809454874539"
               target="_blank"
               class="btn btn-secondary"
               >View All Reviews on Airbnb</a
