--- a/public/index.html
+++ b/public/index.html
@@ -248,7 +248,7 @@
           <h2 class="section-title">Prime Location</h2>
           <div class="map-container" data-aos="fade-up">
             <iframe
-              src="https://www.google.com/maps/place/Davidson+Landing+Community/@35.5061294,-80.8719638,17.5z/data=!4m6!3m5!1s0x8856abb8f2866699:0xa188a138ecad93e1!8m2!3d35.506134!4d-80.8702468!16s%2Fg%2F1tg35y71?entry=ttu&g_ep=EgoyMDI1MTAyMi4wIKXMDSoASAFQAw%3D%3D"
+              src="https://maps.app.goo.gl/T9p4JThqYgZkWd389"
               width="100%"
               height="450"
               style="border: 0"
@@ -271,22 +271,27 @@
             <div class="swiper-wrapper">
               <!-- Ejemplo de Review 1 -->
               <div class="swiper-slide review-slide">
-                <img src="images/review1.jpg" alt="Guest review from Airbnb" />
+                <img src="images/review1.png" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
-                  <h3>"Absolutely perfect!"</h3>
+                  <h3>"Highly recommend!"</h3>
                   <p>
-                    "The place was spotless and had everything we needed. The
-                    lake view from the deck was breathtaking. We can't wait to
-                    come back!"
+                    "We had an incredible time at this lake condo! The view was
+                    absolutely beautiful, and we enjoyed relaxing while taking
+                    it all in. The host was very responsive and ensured that
+                    everything we needed was available. When we requested to
+                    change the thermostat schedule, Lilianny acted quickly and
+                    accommodated our needs. The location was perfect for evening
+                    strolls along the boardwalk, which made our stay even more
+                    memorable. Highly recommend!"
                   </p>
-                  <span>- Happy Traveler, March 2024</span>
+                  <span>- October, 2024</span>
                 </div>
               </div>
 
               <!-- Ejemplo de Review 2 -->
               <div class="swiper-slide review-slide">
-                <img src="images/review2.jpg" alt="Guest review from Airbnb" />
+                <img src="images/review2.png" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
                   <h3>"A true gem!"</h3>
@@ -300,7 +305,7 @@
 
               <!-- Ejemplo de Review 3 -->
               <div class="swiper-slide review-slide">
-                <img src="images/review3.jpg" alt="Guest review from Airbnb" />
+                <img src="images/review3.png" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
                   <h3>"Peaceful and serene"</h3>
