--- a/public/index.html
+++ b/public/index.html
@@ -294,12 +294,12 @@
                 <img src="images/review2.png" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
-                  <h3>"A true gem!"</h3>
+                  <h3>"Definitely recommend it!"</h3>
                   <p>
-                    "This rental exceeded our expectations. Close to charming
-                    Davidson and a quick drive to Charlotte. Highly recommend!"
+                    "This place was very relaxing and had a beautiful view! The
+                    hosts were great!"
                   </p>
-                  <span>- Family Vacationers, February 2024</span>
+                  <span>- February 2025</span>
                 </div>
               </div>
 
@@ -308,12 +308,17 @@
                 <img src="images/review3.png" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
-                  <h3>"Peaceful and serene"</h3>
+                  <h3>"Absolutely would recommend"</h3>
                   <p>
-                    "Just what we needed for a relaxing getaway. The hosts were
-                    incredibly responsive. Five stars!"
+                    "Extremely clean and beautiful condo on Lake Norman. Very
+                    well stocked with all necessities. Close to restaurants in
+                    Davidson and just off the interstate. Located on a quiet
+                    cove with walkable boardwalks on the lake. Our kids enjoyed
+                    sitting on the patio in the morning and having breakfast
+                    while we took in the lake views. Absolutely would recommend
+                    and will be staying again in the future."
                   </p>
-                  <span>- Weekend Escapers, January 2024</span>
+                  <span>- June 2024</span>
                 </div>
               </div>
 
