--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,7 @@
             <div class="swiper-wrapper">
               <!-- Ejemplo de Review 1 -->
               <div class="swiper-slide review-slide">
-                <img src="images/review1.png" alt="Guest review from Airbnb" />
+                <img src="images/review1.jpg" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
                   <h3>"Highly recommend!"</h3>
@@ -291,7 +291,7 @@
 
               <!-- Ejemplo de Review 2 -->
               <div class="swiper-slide review-slide">
-                <img src="images/review2.png" alt="Guest review from Airbnb" />
+                <img src="images/review2.jpg" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
                   <h3>"Definitely recommend it!"</h3>
@@ -305,7 +305,7 @@
 
               <!-- Ejemplo de Review 3 -->
               <div class="swiper-slide review-slide">
-                <img src="images/review3.png" alt="Guest review from Airbnb" />
+                <img src="images/review3.jpg" alt="Guest review from Airbnb" />
                 <div class="review-overlay">
                   <i class="fab fa-airbnb review-icon"></i>
                   <h3>"Absolutely would recommend"</h3>
