--- a/public/index.html
+++ b/public/index.html
@@ -248,12 +248,13 @@
           <h2 class="section-title">Prime Location</h2>
           <div class="map-container" data-aos="fade-up">
             <iframe
-              src="https://maps.app.goo.gl/T9p4JThqYgZkWd389"
-              width="100%"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3247.9249476454197!2d-80.87024679999999!3d35.506133999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8856abb8f2866699%3A0xa188a138ecad93e1!2sDavidson%20Landing%20Community!5e0!3m2!1ses!2sec!4v1761592681368!5m2!1ses!2sec"
+              width="600"
               height="450"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
         </div>
@@ -272,35 +273,11 @@
               <!-- Ejemplo de Review 1 -->
               <div class="swiper-slide review-slide">
                 <img src="images/review1.jpg" alt="Guest review from Airbnb" />
-                <div class="review-overlay">
-                  <i class="fab fa-airbnb review-icon"></i>
-                  <h3>"Highly recommend!"</h3>
-                  <p>
-                    "We had an incredible time at this lake condo! The view was
-                    absolutely beautiful, and we enjoyed relaxing while taking
-                    it all in. The host was very responsive and ensured that
-                    everything we needed was available. When we requested to
-                    change the thermostat schedule, Lilianny acted quickly and
-                    accommodated our needs. The location was perfect for evening
-                    strolls along the boardwalk, which made our stay even more
-                    memorable. Highly recommend!"
-                  </p>
-                  <span>- October, 2024</span>
-                </div>
               </div>
 
               <!-- Ejemplo de Review 2 -->
               <div class="swiper-slide review-slide">
                 <img src="images/review2.jpg" alt="Guest review from Airbnb" />
-                <div class="review-overlay">
-                  <i class="fab fa-airbnb review-icon"></i>
-                  <h3>"Definitely recommend it!"</h3>
-                  <p>
-                    "This place was very relaxing and had a beautiful view! The
-                    hosts were great!"
-                  </p>
-                  <span>- February 2025</span>
-                </div>
               </div>
 
               <!-- Ejemplo de Review 3 -->
