--- a/public/index.html
+++ b/public/index.html
@@ -248,7 +248,7 @@
           <h2 class="section-title">Prime Location</h2>
           <div class="map-container" data-aos="fade-up">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3247.9249476454197!2d-80.87024679999999!3d35.506133999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8856abb8f2866699%3A0xa188a138ecad93e1!2sDavidson%20Landing%20Community!5e0!3m2!1ses!2sec!4v1761592681368!5m2!1ses!2sec"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3248.0132534979866!2d-80.87165227752384!3d35.50395050909826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8856abb8f2866699%3A0xa188a138ecad93e1!2sDavidson%20Lake%20Norman!5e0!3m2!1ses!2sec!4v1761603252938!5m2!1ses!2sec"
               width="100%"
               height="450"
               style="border: 0"
