--- a/public/index.html
+++ b/public/index.html
@@ -339,6 +339,14 @@
               </div>
             </div>
           </form>
+          <div class="airbnb-button-wrapper">
+            <a
+              href="https://www.airbnb.com.ec/rooms/732102319759567131?viralityEntryPoint=1&s=76&_set_bev_on_new_domain=1761410183_EAYzYyYjgyN2MxYW&source_impression_id=p3_1761586481_P3S3SGED0Ux4sxro#availability-calendar"
+              target="_blank"
+              class="btn btn-primary airbnb-redirect-btn"
+              >Book on Airbnb <i class="fab fa-airbnb"></i
+            ></a>
+          </div>
         </div>
       </section>
     </main>
