--- a/public/index.html
+++ b/public/index.html
@@ -333,7 +333,7 @@
                   <span>Total</span>
                   <span id="total-price">$0</span>
                 </div>
-                <button type="submit" class="btn btn-primary hidden-button">
+                <button type="submit" class="btn btn-secondary hidden-button">
                   Request to Book
                 </button>
               </div>
