--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                 readonly="readonly"
               />
 
-              <div id="booking-summary" class="booking-summary-hidden">
+              <div id="booking-summary" class="btn btn-primary hidden-button">
                 <div class="summary-item">
                   <span
                     >$<span id="price-per-night">150</span> x
@@ -333,7 +333,7 @@
                   <span>Total</span>
                   <span id="total-price">$0</span>
                 </div>
-                <button type="submit" class="btn btn-secondary hidden-button">
+                <button type="submit" class="btn btn-primary hidden-button">
                   Request to Book
                 </button>
               </div>
